adding some radius to circle avatar

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,17 @@ flutter:
     - assestimg/car 2.jfif
     - assestimg/img 2.png
     - assestimg/imgcar.jfif
+    - assestimg/cart1.jpg
+    - assestimg/img5.jfif
+    - assestimg/img6.jfif
+    - assestimg/img7.jfif
+    - assestimg/img8.jfif
+    - assestimg/img9.jfif
+    - assestimg/img10.jfif
+    - assestimg/img11.png
+    - assestimg/img13.jfif
+    - assestimg/img14.jfif
+    - assestimg/img15.jfif
 
 
   #   - images/a_dot_burr.jpeg
