--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,7 @@ flutter:
     - assestimg/img13.jfif
     - assestimg/img14.jfif
     - assestimg/img15.jfif
+    - assestimg/facebook.png
 
 
   #   - images/a_dot_burr.jpeg
